--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ migrate_working_dir/
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
+*android
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -30,7 +31,7 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-/android/
+
 
 # Symbolication related
 app.*.symbols
@@ -42,3 +43,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/app/google-services.json
